# sky-tracer

./: .gitignore  Cargo.toml
crates/sky-analytic-atmosphere/: Cargo.toml
crates/sky-analytic-atmosphere/src/: lib.rs  renderer.rs
crates/sky-analytic-atmosphere/src/wgsl/: analytic_sky.wgsl
crates/sky-bake/: Cargo.toml
crates/sky-bake/src/: main.rs
crates/sky-bruneton-atmosphere-4wave/: Cargo.toml
crates/sky-bruneton-atmosphere-4wave/src/: lib.rs  params.rs  renderer.rs
crates/sky-bruneton-atmosphere-4wave/src/wgsl/: common.wgsl  multiple_scattering_4d.comp.wgsl  render_sky_bruneton.wgsl  scattering_density.comp.wgsl  scattering_density_accumulation.comp.wgsl  sky_view.comp.wgsl  transmittance.comp.wgsl
crates/sky-bruneton-atmosphere-8wave/: Cargo.toml
crates/sky-bruneton-atmosphere-8wave/src/: lib.rs  params.rs  renderer.rs
crates/sky-bruneton-atmosphere-8wave/src/aerosol_hi/: soot.rs
crates/sky-bruneton-atmosphere-8wave/src/aerosol_lo/: soot.rs
crates/sky-core/: Cargo.toml
crates/sky-core/src/: asset.rs  atmosphere.rs  data.rs  geometry.rs  lib.rs  math.rs  medium.rs  phase.rs  spectrum.rs
crates/sky-offline/: Cargo.toml
crates/sky-offline/src/: config.rs  film.rs  integrator.rs  sky_trace.wgsl
crates/sky-offline/tests/: smoke.rs
crates/sky-precomputed-atmosphere/: Cargo.toml
crates/sky-precomputed-atmosphere/src/: lib.rs  renderer.rs
crates/sky-precomputed-atmosphere/src/wgsl/: accumulate_2d.comp.wgsl  accumulate_3d.comp.wgsl  common.wgsl  direct_irradiance.comp.wgsl  indirect_irradiance.comp.wgsl  multiple_scattering.comp.wgsl  render_sky.wgsl  scattering_density.comp.wgsl  single_scattering.comp.wgsl  transmittance.comp.wgsl
crates/sky-realtime-atmosphere/: Cargo.toml
crates/sky-realtime-atmosphere/src/: atmosphere.rs  lib.rs  params.rs  renderer.rs  sun.rs
crates/sky-realtime-demo/: Cargo.toml
crates/sky-realtime-demo/src/: app.rs  assets.rs  color.rs  experiment.rs  gpu.rs  main.rs  view.rs
crates/sky-realtime-demo/src/passes/: analytic_atmosphere.rs  bruneton_atmosphere_4wave.rs  bruneton_atmosphere_8wave.rs  common.rs  fullscreen_debug.rs  hillaire_atmosphere.rs  mod.rs  precomputed_atmosphere.rs  unreal_atmosphere.rs  unreal_atmosphere_3wave.rs  unreal_atmosphere_4wave.rs  unreal_atmosphere_8wave.rs
crates/sky-realtime-demo/src/shaders/: fullscreen_debug.wgsl  present_texture.wgsl
crates/sky-reference-render/: Cargo.toml
crates/sky-reference-render/src/: film_output.rs  main.rs
crates/sky-spectral-path-tracer/: Cargo.toml
crates/sky-spectral-path-tracer/src/: config.rs  film.rs  integrator.rs  lib.rs  sky_trace.wgsl
crates/sky-spectral-path-tracer/tests/: smoke.rs
crates/sky-unreal-atmosphere/: Cargo.toml
crates/sky-unreal-atmosphere-3wave/: Cargo.toml
crates/sky-unreal-atmosphere-3wave/src/: lib.rs  params.rs
crates/sky-unreal-atmosphere-4wave/: Cargo.toml
crates/sky-unreal-atmosphere-4wave/src/: aerosol.rs  lib.rs  params.rs  renderer.rs
crates/sky-unreal-atmosphere-8wave/: Cargo.toml
crates/sky-unreal-atmosphere-8wave/src/: aerosol.rs  lib.rs  renderer.rs
crates/sky-unreal-atmosphere/src/: lib.rs  renderer.rs  sun.rs
crates/sky-wavelength-optimizer/: Cargo.toml
data/: aerosol_optics.csv  aerosol_profile.csv  atmosphere_profile.csv  bands.csv  mie_phase.csv
reports/skyview_primary_search/: ranking.csv  ranking_by_elevation.csv  report.md
reports/skyview_primary_search_3wave_cmf_mass/: ranking.csv  ranking_by_elevation.csv  report.md
reports/skyview_primary_search_4wave/: ranking.csv  ranking_by_elevation.csv  report.md
reports/skyview_primary_search_4wave_cmf_mass/: ranking.csv  ranking_by_elevation.csv  report.md
reports/skyview_primary_search_4wave_cmf_moments/: ranking.csv  ranking_by_elevation.csv  report.md
scripts/: bake_opac_data.py  bake_skyview_elevations.ps1  export_realtime_spectral_crate.py
shadertoy/: analytic_atmosphere.glsl
src/: atmosphere.rs  config.rs  data.rs  film.rs  geometry.rs  integrator.rs  lib.rs  main.rs  medium.rs  phase.rs  sampling.rs  sky_trace.wgsl  spectrum.rs
tests/: smoke.rs
(+61 files in other folders)
