[package]
name = "sky_tracer"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.25", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
exr = "1.73"
image = { version = "0.25", default-features = false, features = ["png"] }
pollster = "0.4"
wgpu = "29.0.3"
