[package]
name = "sky-precomputed-atmosphere"
version.workspace = true
edition.workspace = true

[dependencies]
bytemuck = { workspace = true }
glam = { workspace = true }
sky-realtime-atmosphere = { path = "../sky-realtime-atmosphere" }
wgpu = { workspace = true }

[dev-dependencies]
naga = { version = "29.0.3", features = ["wgsl-in"] }
