[package]
name = "sky-realtime-demo"
version.workspace = true
edition.workspace = true

[dependencies]
bytemuck = { workspace = true }
clap = { workspace = true }
exr = { workspace = true }
glam = { workspace = true }
pollster = { workspace = true }
serde_json = { workspace = true }
sky-core = { path = "../sky-core" }
sky-analytic-atmosphere = { path = "../sky-analytic-atmosphere" }
sky-unreal-atmosphere = { path = "../sky-unreal-atmosphere" }
sky-unreal-atmosphere-3wave = { path = "../sky-unreal-atmosphere-3wave" }
sky-unreal-atmosphere-4wave = { path = "../sky-unreal-atmosphere-4wave" }
wgpu = { workspace = true }
winit = { workspace = true }

[dev-dependencies]
naga = { version = "29.0.3", features = ["wgsl-in"] }
