[package]
name = "sky-reference-render"
version.workspace = true
edition.workspace = true

[dependencies]
clap = { workspace = true }
exr = { workspace = true }
image = { workspace = true }
serde_json = { workspace = true }
sky-core = { path = "../sky-core" }
sky-spectral-path-tracer = { path = "../sky-spectral-path-tracer" }
